--- a/src/app/components/sesion-terapia/sesion-terapia-form/sesion-terapia-form.component.css
+++ b/src/app/components/sesion-terapia/sesion-terapia-form/sesion-terapia-form.component.css
@@ -9,6 +9,10 @@
     padding-bottom: 80px;
 }
 
+#nro-sesion {
+    width: 20px;
+}
+
 #title {
     padding-bottom: 25px;
     margin-bottom: 10px;
