--- a/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
+++ b/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
@@ -7,7 +7,8 @@
             <h5>El/la paciente ha agendado las siguientes atenciones.</h5>
         </div>
         <div class="col-lg-5">
-            <app-filtrar-asistencia [title]="'Filtrar las atenciones'" [options]="options" (filterEvent)="filtrar($event)"></app-filtrar-asistencia>
+            <app-filtrar-asistencia [title]="'Filtrar las atenciones'" [options]="options"
+                (filterEvent)="filtrar($event)"></app-filtrar-asistencia>
         </div>
     </div>
 
@@ -23,6 +24,7 @@
                             <th>Fecha</th>
                             <th>Asistencia</th>
                             <th>Pago</th>
+                            <th>Opciones</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -41,11 +43,18 @@
                             <!-- Pago por atención -->
                             <td *ngIf="atencion.pago">La sesión fue pagada</td>
                             <td *ngIf="!atencion.pago">La sesión no ha sido pagada</td>
+
+                            <!-- Opciones -->
+                            <td *ngIf="atencion.pago">-</td>
+                            <td *ngIf="!atencion.pago">
+                                <button [routerLink]="['../../../horario/pago', atencion.idAtencion]"
+                                    class="btn btn-primary" type="button">Registrar pago</button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
-                <pagination-controls (pageChange)="currentPage = $event" id="atenciones-paciente" [maxSize]="5" [directionLinks]="true"
-                    previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
+                <pagination-controls (pageChange)="currentPage = $event" id="atenciones-paciente" [maxSize]="5"
+                    [directionLinks]="true" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
             </div>
         </div>
 
@@ -56,7 +65,7 @@
         </div>
 
         <!-- Botón que permite volver atrás -->
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12 text-center" id="back-button">
             <button (click)="back()" class="btn btn-primary" type="button">Volver</button>
         </div>
     </div>
