--- a/src/app/components/sesion-terapia/lista-sesiones.component.css
+++ b/src/app/components/sesion-terapia/lista-sesiones.component.css
@@ -1,7 +1,3 @@
-#back-button {
-    margin-top: 30px;
-}
-
 #main {
     margin-top: 40px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
@@ -13,10 +9,6 @@
     padding-bottom: 80px;
 }
 
-#text {
-    padding-top: 30px;
-}
-
 #title {
     padding-bottom: 25px;
     margin-top: 20px;
@@ -26,6 +18,14 @@
 
 .color {
     color: #284b63;
+}
+
+.modal-content {
+    padding: 20px 40px;
+}
+
+.modal-header {
+    border-bottom: 5px solid #284b63;
 }
 
 .table-dark {
@@ -44,4 +44,3 @@ i {
 table {
     margin-bottom: 30px;
 }
-
