--- a/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
+++ b/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
@@ -1,7 +1,7 @@
 <div class="container" id="main">
 
     <!-- Título -->
-    <div class="row" id="title">
+    <div class="row separate">
         <div class="col-lg-7" id="text">
             <h2>{{paciente.nombre + " " + paciente.apellido}}</h2>
             <h5>El/la paciente ha agendado las siguientes atenciones.</h5>
@@ -13,7 +13,20 @@
     </div>
 
     <!-- Cuerpo -->
-    <div class="row" id="body">
+    <!-- Botón que permite realización de pago múltiple -->
+    <div class="row separate">
+        <div class="col-lg-12 text-center">
+            <button *ngIf="!selected" (click)="payMultiple()" class="btn btn-primary" type="button">Realizar pago de
+                múltiples atenciones</button>
+
+            <button *ngIf="selected" class="btn btn-primary multiple-payment-btn-add" type="button" data-toggle="modal"
+                data-target="#pay-multiple">Confirmar
+                pago</button>
+        </div>
+    </div>
+
+    <!-- Tabla que muestra las atenciones -->
+    <div class="row">
         <div *ngIf="filtered.length > 0" class="col-lg-12 text-center">
 
             <!-- Tabla que muestra las atenciones-->
@@ -50,6 +63,16 @@
                                 <button [routerLink]="['../../../horario/pago', atencion.idAtencion]"
                                     class="btn btn-primary" type="button">Registrar pago</button>
                             </td>
+                            <td *ngIf="selected">
+                                <button *ngIf="!atencion.pago && !atencion.pagoMultiple"
+                                    class="btn btn-primary multiple-payment-btn-add" type="button"
+                                    (click)="addHorarioParaPagarlo(atencion)"><i id="add-icon"
+                                        class="bi bi-plus"></i>Agregar</button>
+
+                                <button *ngIf="!atencion.pago && atencion.pagoMultiple" id="multiple-payment-btn-remove"
+                                    class="btn btn-primary" type="button" (click)="removerHorario(atencion)"><i
+                                        id="remove-icon" class="bi bi-dash"></i>Remover</button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -67,6 +90,121 @@
         <!-- Botón que permite volver atrás -->
         <div class="col-lg-12 text-center" id="back-button">
             <button (click)="back()" class="btn btn-primary" type="button">Volver</button>
+        </div>
+    </div>
+</div>
+
+<!-- Modal para realizar el pago de múltiples atenciones -->
+<div class="modal fade" id="pay-multiple" tabindex="-1" aria-labelledby="pay-multiple" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="col-lg-12">
+                    <h3>Registrar Pago</h3>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <form>
+                            <!-- Afiliación del paciente -->
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="form-group">
+                                        <label for="medio-pago">Afiliación de salud asociada a este pago:</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text"><i
+                                                    class="bi bi-file-medical-fill"></i></span>
+                                            <input required [readOnly]="!modificarAfiliacion.checked"
+                                                value="{{paciente.afiliacionSalud}}" type="text" ngModel
+                                                #afiliacionPaciente="ngModel" class="form-control" id="afiliacion-pago"
+                                                name="afiliacion-pago" maxlength="30" [(ngModel)]="afiliacion">
+                                        </div>
+                                        <div class="col-lg-12 text-left">
+                                            <input class="form-check-input" type="checkbox" name="modificar-afiliacion"
+                                                id="modificar-afiliacion" ngModel #modificarAfiliacion>
+                                            <label for="modificar-afiliacion" class="form-check-label">Modificar
+                                                afiliación</label>
+                                        </div>
+
+                                        <!-- Manejo de errores -->
+                                        <div class="col-lg-12"
+                                            *ngIf="afiliacionPaciente.invalid && (afiliacionPaciente.touched || afiliacionPaciente.dirty)">
+                                            <div *ngIf="afiliacionPaciente.errors?.required">
+                                                <small class="text-danger">Se debe ingresar la afiliación asociada a
+                                                    este
+                                                    pago.</small>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Medio de pago -->
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="form-group">
+                                        <label for="medio-pago">Medio de pago:</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text"><i class="bi bi-wallet2"></i></span>
+                                            <select required maxlength="30" name="medio-pago" id="medio-pago"
+                                                class="form-select" ngModel #medioPago="ngModel"
+                                                [(ngModel)]="pago.medioPago">
+                                                <option value="Bono(s)">Bono(s)</option>
+                                                <option value="Programa">Programa</option>
+                                                <option value="Bonos/Programa">Bonos y programa</option>
+                                                <option value="Efectivo">Efectivo</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Monto del pago -->
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="form-group">
+                                        <label for="monto-pago">Monto:</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text"><i class="bi bi-cash-stack"></i></span>
+                                            <input [value]="medioPago.value != 'Efectivo' ? '' : montoPago.value"
+                                                [readOnly]="medioPago.value != 'Efectivo'"
+                                                [required]="medioPago.value == 'Efectivo'" pattern="^[0-9]+$" ngModel
+                                                #montoPago="ngModel" type="number" class="form-control"
+                                                [(ngModel)]="pago.montoPago" id="monto-pago" name="monto-pago">
+                                            <div class="col-lg-12">
+                                                <small class="form-text text-secondary">Si el paciente paga con
+                                                    efectivo, debe
+                                                    ingresar el
+                                                    monto.</small>
+                                            </div>
+                                            <div class="col-lg-12">
+                                                <small class="form-text text-secondary">Ingrese solo dígitos.</small>
+                                            </div>
+                                        </div>
+
+                                        <!-- Manejo de errores -->
+                                        <div class="col-lg-12"
+                                            *ngIf="montoPago.invalid && (montoPago.touched || montoPago.dirty)">
+                                            <div *ngIf="montoPago.errors?.required">
+                                                <small class="text-danger">Se debe ingresar el monto del pago.</small>
+                                            </div>
+                                            <div *ngIf="montoPago.errors?.pattern">
+                                                <small class="text-danger">Se debe ingresar un monto válido.</small>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button (click)="confirmPayment()" data-dismiss="modal" class="btn btn-primary" type="button">Registrar
+                    pago</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
